# p4c-s4

./: .gitignore  CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp  native_object.h  options.h  s4.cpp  wasm.cpp  wasm.h
driver/: p4c.s4.cfg
p4_backend/: backend.cpp  backend.h  visitor.cpp  visitor.h
p4include/: s4.p4
testdata/: test.sh
testdata/test1/: parser.rs
wasmc/: .gitignore  Cargo.toml
wasmc/src/: lib.rs  wasmer.rs
