[package]
name = "wasmc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer = "3.1.1"
wasmer-compiler = { version = "3.1.1", features=["static-artifact-create"] }
wasmer-compiler-llvm = { version = "3.1.1" }
# wasmer-compiler = { version = "3.1.1", features=["compiler"] }
